stream-restore: Clean up the database at startup.

Fixes a crash: https://bugs.freedesktop.org/show_bug.cgi?id=44522